# engine

./: .gitignore  Cargo.toml  README.md  flake.nix  pong_visualizer.py
src/: args.rs  cli.rs  engine.rs  game.rs  ipc.rs  lib.rs  main.rs
src/game/: action.rs  config.rs  mod.rs  state.rs  util.rs
